- Add menu show/hide feature (need more visual development) - Fix some alignment issue on Disco Mode - Fix next puzzle appearance issue

--- a/tetris.css
+++ b/tetris.css
@@ -167,7 +167,7 @@ body, table, input {
 #tetris-nextpuzzle {
 	position: absolute;
 	top: 20%;
-	left: 120%;
+	left: 32%;
 	background:	#ffffff;
 	overflow: visible;
 	display: none;
